--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 .RData filter=lfs diff=lfs merge=lfs -text
 .RHistory filter=lfs diff=lfs merge=lfs -text
 *.Rproj filter=lfs diff=lfs merge=lfs -text
+.RDataTmp filter=lfs diff=lfs merge=lfs -text
